just so I can clone everything to my new laptop

--- a/milestone_RNN.ipynb
+++ b/milestone_RNN.ipynb
@@ -476,13 +476,7 @@
     "print('text sequence to sequence pad looks like' ,X[0])\n",
     "\n",
     "y = df['type'] \n",
-    "y_one_hot = pd.get_dummies(y)   # One hot encode the target variable\n",
-    "\n",
-    "\n",
-    "label_tokenizer = tf.keras.preprocessing.text.Tokenizer()\n",
-    "label_tokenizer.fit_on_texts(list(y))\n",
-    "label_seq = np.array(label_tokenizer.texts_to_sequences(y))\n",
-    "label_seq = label_seq.reshape(-1)\n"
+    "y_one_hot = pd.get_dummies(y)   # One hot encode the target variable"
    ]
   },
   {
